# CreuSAT

./: .gitattributes  .gitignore  .why3.conf  Cargo.toml  LICENSE  Makefile.toml  README.md  dev  do_creusot_upgrade.sh  ide  mlcfg  rust-toolchain  rustfmt.toml  why3.conf  why3find.json
Abstract/: Cargo.toml
Abstract/src/: assignments.rs  clause.rs  clause_allocator.rs  clause_manager.rs  cref.rs  cref_manager.rs  formula.rs  lib.rs  lit.rs  logic_util.rs
CreuSAT/: Cargo.toml  why3find.json
CreuSAT/.why3find/: hammer.cfg
CreuSAT/src/: assignments.rs  assignments.rs.bak  clause.rs  clause.rs.bak  conflict_analysis.rs  conflict_analysis.rs.bak  decision.rs  formula.rs  formula.rs.bak  lib.rs  lit.rs  main.rs  naive.rs  parser.rs  solver.rs  target_phase.rs  trail.rs  unit_prop.rs  unit_prop.rs.bak  util.rs  vmtf.rs  vsids.rs  watches.rs  watches.rs.bak
CreuSAT/src/logic/: logic.rs  logic_assignments.rs  logic_clause.rs  logic_conflict_analysis.rs  logic_decision.rs  logic_formula.rs  logic_lit.rs  logic_trail.rs  logic_util.rs  logic_vmtf.rs  logic_watches.rs  mod.rs
Friday/: Cargo.toml  why3find.json
Friday/.why3find/: version
Friday/src/: lib.rs  solver.rs
JigSAT/: Cargo.toml
JigSAT/src/: .gitattributes  assignments.rs  clause.rs  clause_database.rs  conflict_analysis.rs  decision.rs  formula.rs  lib.rs  lit.rs  main.rs  minimize.rs  modes.rs  parser.rs  preprocess.rs  restart.rs  solver.rs  solver_stats.rs  solver_types.rs  target_phase.rs  trail.rs  unit_prop.rs  util.rs  watches.rs  watches_binary.rs
JigSAT/src/clause_manager/: clause_allocator.rs  clause_manager.rs  common.rs  cref_manager.rs  mod.rs
Scratch/: Cargo.toml  README.md
Scratch/src/: assignments.rs  clause.rs  formula.rs  lib.rs  lit.rs  logic.rs  main.rs  restart.rs  scratch.rs  target_phase.rs  vsids.rs
abstract-dpll/: Cargo.toml
abstract-dpll/src/: lib.rs
no-creusot/: Cargo.toml
no-creusot/src/: assignments.rs  clause.rs  conflict_analysis.rs  decision.rs  formula.rs  lib.rs  lit.rs  luby.rs  main.rs  parser.rs  solver.rs  trail.rs  types.rs  watches.rs
no-creusot/tests/: php11_9.cnf  php13_12.cnf  php20_20.cnf  php4_3.cnf  php4_4.cnf  php9_8.cnf  test.rs  test_opposite_units.cnf  test_parser.rs
no-creusot/tests/dafny/: hole6.cnf  queens16.cnf  zebra.cnf
no-creusot/tests/satlib/: README.md
tests/: .gitignore  Cargo.toml  manthey_test.cnf  test.rs  test_parser.rs  trivial.cnf
tests/2015/: 32bits_10.dimacs.cnf  32bits_11.dimacs.cnf  32bits_14.dimacs.cnf
tests/cnf/: 2bitadd_11.cnf  2bitadd_12.cnf  2bitcomp_5.cnf  2bitmax_6.cnf  3bitadd_31.cnf  3blocks.cnf  4blocks.cnf  4blocksb.cnf
tests/cnf-hard/: 2bitadd_10.cnf  3bitadd_32.cnf  e0ddr2-10-by-5-1.cnf  e0ddr2-10-by-5-4.cnf  enddr2-10-by-5-1.cnf  enddr2-10-by-5-8.cnf  ewddr2-10-by-5-1.cnf  ewddr2-10-by-5-8.cnf  grieu-vmpc-s05-24s.cnf  manol-pipe-f6b.cnf  manol-pipe-f6n.cnf  stric-bmc-ibm-12.cnf  uf250-01.cnf  uf250-010.cnf  uf250-0100.cnf  uf250-011.cnf  uf250-019.cnf  uf250-02.cnf  uf250-022.cnf  uf250-023.cnf  uf250-027.cnf  uf250-028.cnf  uf250-029.cnf  uf250-03.cnf  uf250-032.cnf  uf250-034.cnf  uf250-038.cnf  uf250-039.cnf  uf250-041.cnf  uf250-042.cnf  uf250-043.cnf  uf250-045.cnf  uf250-047.cnf  uf250-048.cnf  uf250-05.cnf  uf250-050.cnf  uf250-051.cnf  uf250-056.cnf  uf250-057.cnf  uf250-058.cnf  (+71 more)
tests/cnf-hard/sat/: uf250-012.cnf  uf250-013.cnf  uf250-014.cnf  uf250-016.cnf  uf250-017.cnf  uf250-018.cnf  uf250-020.cnf  uf250-021.cnf  uf250-024.cnf  uf250-025.cnf  uf250-026.cnf  uf250-030.cnf  uf250-031.cnf  uf250-036.cnf  uf250-04.cnf  uf250-040.cnf  uf250-044.cnf  uf250-046.cnf  uf250-049.cnf  uf250-052.cnf  uf250-053.cnf  uf250-054.cnf  uf250-06.cnf  uf250-060.cnf  uf250-062.cnf  uf250-064.cnf  uf250-067.cnf  uf250-068.cnf  uf250-070.cnf  uf250-073.cnf  uf250-074.cnf  uf250-078.cnf  uf250-079.cnf  uf250-08.cnf  uf250-080.cnf  uf250-082.cnf  uf250-084.cnf  uf250-086.cnf  uf250-087.cnf  uf250-088.cnf  (+5 more)
tests/cnf-hard/unsat/: uuf250-012.cnf  uuf250-013.cnf  uuf250-014.cnf  uuf250-018.cnf  uuf250-020.cnf  uuf250-022.cnf  uuf250-024.cnf  uuf250-026.cnf  uuf250-027.cnf  uuf250-032.cnf  uuf250-033.cnf  uuf250-037.cnf  uuf250-038.cnf  uuf250-039.cnf  uuf250-040.cnf  uuf250-042.cnf  uuf250-049.cnf  uuf250-050.cnf  uuf250-052.cnf  uuf250-053.cnf  uuf250-054.cnf  uuf250-055.cnf  uuf250-057.cnf  uuf250-060.cnf  uuf250-063.cnf  uuf250-064.cnf  uuf250-065.cnf  uuf250-068.cnf  uuf250-069.cnf  uuf250-07.cnf  uuf250-070.cnf  uuf250-072.cnf  uuf250-073.cnf  uuf250-074.cnf  uuf250-075.cnf  uuf250-077.cnf  uuf250-078.cnf  uuf250-080.cnf  uuf250-083.cnf  uuf250-084.cnf  (+7 more)
tests/cnf/sat/: uf20-01.cnf  uf20-010.cnf  uf20-0100.cnf  uf20-01000.cnf  uf20-0101.cnf  uf20-0102.cnf  uf20-0103.cnf  uf20-0104.cnf  uf20-0105.cnf  uf20-0106.cnf  uf20-0107.cnf  uf20-0108.cnf  uf20-0109.cnf  uf20-011.cnf  uf20-0110.cnf  uf20-0111.cnf  uf20-0112.cnf  uf20-0113.cnf  uf20-0114.cnf  uf20-0115.cnf  uf20-0116.cnf  uf20-0117.cnf  uf20-0118.cnf  uf20-0119.cnf  uf20-012.cnf  uf20-0120.cnf  uf20-0121.cnf  uf20-0122.cnf  uf20-0123.cnf  uf20-0124.cnf  uf20-0125.cnf  uf20-0126.cnf  uf20-0127.cnf  uf20-0128.cnf  uf20-0129.cnf  uf20-013.cnf  uf20-0130.cnf  uf20-0131.cnf  uf20-0132.cnf  uf20-0133.cnf  (+1968 more)
tests/cnf/stuck/: uf50-078.cnf
tests/cnf/unsat/: uuf50-01.cnf  uuf50-010.cnf  uuf50-0100.cnf  uuf50-01000.cnf  uuf50-0101.cnf  uuf50-0102.cnf  uuf50-0103.cnf  uuf50-0104.cnf  uuf50-0105.cnf  uuf50-0106.cnf  uuf50-0107.cnf  uuf50-0108.cnf  uuf50-0109.cnf  uuf50-011.cnf  uuf50-0110.cnf  uuf50-0111.cnf  uuf50-0112.cnf  uuf50-0113.cnf  uuf50-0114.cnf  uuf50-0115.cnf  uuf50-0116.cnf  uuf50-0117.cnf  uuf50-0118.cnf  uuf50-0119.cnf  uuf50-012.cnf  uuf50-0120.cnf  uuf50-0121.cnf  uuf50-0122.cnf  uuf50-0123.cnf  uuf50-0124.cnf  uuf50-0125.cnf  uuf50-0126.cnf  uuf50-0127.cnf  uuf50-0128.cnf  uuf50-0129.cnf  uuf50-013.cnf  uuf50-0130.cnf  uuf50-0131.cnf  uuf50-0132.cnf  (+961 more)
tests/src/: lib.rs
yes-creusot/: Cargo.toml
yes-creusot/src/: assignments.rs  clause.rs  conflict_analysis.rs  ex.rs  formula.rs  lib.rs  lit.rs  main.rs  mock.rs  solver.rs  trail.rs  watches.rs
(+6006 files in other folders)
