[package]
name = "sat"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarekhs@uio.no>"]
edition = "2021"

[toolchain]
channel = "nightly-2022-04-14"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
debug = false
lto = true
opt-level = 3

[profile.release]
debug = false
lto = true
opt-level = 3

[dependencies]
clap = "2.33.3"
creusot-contracts = { path = "../creusot/creusot-contracts", version = "^0" }

[dev-dependencies]
termcolor = "1.1"

[features]
contracts = ["creusot-contracts/contracts"]
trust_all = ["trust_decision", "trust_trail", "trust_clause", "trust_conflict", "trust_formula", "trust_unit", "trust_util", "trust_watches", "trust_logic" ]
trust_decision = []
trust_trail = ["trust_trail_logic"]
trust_clause = []
trust_conflict = [ "trust_conflict_logic" ]
trust_formula = [ "trust_formula_logic" ]
trust_unit = []
trust_util = []
trust_watches = []
trust_trail_logic = []
trust_logic = [ "trust_trail_logic" , "trust_conflict_logic", "trust_formula_logic"]
trust_conflict_logic = []
trust_util_logic = []
trust_formula_logic = []
