[workspace]
members = ["CreuSAT", "Robinson", "Friday", "JigSAT", "Scratch", "tests"]

[profile.release]
debug = false
#split-debuginfo = ?
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
debug = false
lto = true
opt-level = 3
