[package]
name = "Abstract"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarek.skotam@gmail.com>"]
edition = "2021"


[dependencies]
#creusot-contracts = { git = "https://github.com/xldenis/creusot", version = "^0", rev = "b442bf1a" }
creusot-contracts = { path = "/Users/sarek/Programming/creusot/creusot-contracts" }
