[package]
name = "CreuSAT"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarekhs@uio.no>"]
edition = "2021"

[toolchain]
channel = "nightly-2022-04-14"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
debug = false
lto = true
opt-level = 3

[profile.release]
debug = false
lto = true
opt-level = 3

[dependencies]
clap = "2.33.3"
#creusot-contracts = { path = "../../creusot/creusot-contracts", version = "^0" }
creusot-contracts = { git = "https://github.com/xldenis/creusot", branch = "sarsko" , version = "^0" }

[dev-dependencies]
termcolor = "1.1"

[features]
contracts = ["creusot-contracts/contracts"]
trust_all = [
"trust_assignments",
"trust_clause",
"trust_conflict",
"trust_decision",
"trust_formula",
"trust_lit",
"trust_solver",
"trust_trail",
"trust_unit",
"trust_util",
"trust_watches",
"trust_logic",
]
trust_logic = [
"trust_clause_logic",
"trust_conflict_logic",
"trust_decision_logic",
"trust_formula_logic",
"trust_lit_logic",
"trust_solver_logic",
"trust_trail_logic",
"trust_unit_logic",
"trust_util_logic",
"trust_watches_logic",
"trust_logic_logic",
]
trust_assignments = []
trust_assignments_logic = []
trust_clause = []
trust_clause_logic = []
trust_conflict = [ "trust_conflict_logic" ]
trust_conflict_logic = []
trust_decision = []
trust_decision_logic = []
trust_formula = [ "trust_formula_logic" ]
trust_formula_logic = []
trust_lit = [ "trust_lit_logic" ]
trust_lit_logic = []
trust_logic_logic = []
trust_solver = []
trust_solver_logic = []
trust_trail = ["trust_trail_logic"]
trust_trail_logic = []
trust_unit = []
trust_unit_logic = []
trust_util = []
trust_util_logic = []
trust_watches = []
trust_watches_logic = []
