[package]
name = "CreuSAT"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarek.skotam@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
rand = "0.8.5"
creusot-contracts = { git = "https://github.com/xldenis/creusot", version = "^0", rev = "4f7f6cd9" }

[dev-dependencies]
termcolor = "1.1"

[features]
trust_all = [
    "trust_assignments",
    "trust_clause",
    "trust_conflict",
    "trust_decision",
    "trust_formula",
    "trust_lit",
    "trust_solver",
    "trust_trail",
    "trust_unit",
    "trust_util",
    "trust_watches",
    "trust_logic",
]
trust_logic = [
    "trust_clause_logic",
    "trust_conflict_logic",
    "trust_decision_logic",
    "trust_formula_logic",
    "trust_lit_logic",
    "trust_solver_logic",
    "trust_trail_logic",
    "trust_unit_logic",
    "trust_util_logic",
    "trust_watches_logic",
    "trust_logic_logic",
]
trust_assignments = []
trust_assignments_logic = []
trust_clause = []
trust_clause_logic = []
trust_conflict = ["trust_conflict_logic"]
trust_conflict_logic = []
trust_decision = []
trust_decision_logic = []
trust_formula = ["trust_formula_logic"]
trust_formula_logic = []
trust_lit = ["trust_lit_logic"]
trust_lit_logic = []
trust_logic_logic = []
trust_solver = []
trust_solver_logic = []
trust_trail = ["trust_trail_logic"]
trust_trail_logic = []
trust_unit = []
trust_unit_logic = []
trust_util = []
trust_util_logic = []
trust_watches = []
trust_watches_logic = []
problem_child = []
