[package]
name = "Friday"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarekhs@uio.no>"]
edition = "2021"

[toolchain]
channel = "nightly-2022-04-14"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
debug = false
lto = true
opt-level = 3

[profile.release]
debug = false
lto = true
opt-level = 3

[dependencies]
#clap = "2.33.3"
creusot-contracts = { git = "https://github.com/xldenis/creusot", branch = "sarsko" , version = "^0" }