[package]
name = "Friday"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarek.skotam@gmail.com>"]
edition = "2021"


[dependencies]
#clap = "2.33.3"
creusot-contracts = { git = "https://github.com/xldenis/creusot", version = "^0", rev = "1357cc97" }

[features]
contracts = ["creusot-contracts/contracts"]
