[package]
name = "Friday"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarek.skotam@gmail.com>"]
edition = "2021"

# "tactics": [ "split_vc", "introduce_premises", "inline_goal", "split_all_full" ],

[dependencies]
creusot-contracts = "0.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
