[package]
name = "JigSAT"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarekhs@uio.no>"]
edition = "2021"

[toolchain]
channel = "nightly-2022-04-14"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
#debug = false
#lto = true
#opt-level = 3

debug = false
#split-debuginfo = ?
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false

[profile.release]
debug = false
#split-debuginfo = ?
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false

[dependencies]
smallvec = "1.8.0"
clap = "2.33.3"

[dev-dependencies]
termcolor = "1.1"
