[package]
name = "JigSAT"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarek.skotam@gmail.com>"]
edition = "2021"

[toolchain]
channel = "nightly-2022-11-25"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
#debug = false
#lto = true
#opt-level = 3

debug = false
#split-debuginfo = ?
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false

[profile.release]
debug = false
#split-debuginfo = ?
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false

[dependencies]
clap = "2.33.3"
log = "0.4"
rand = "0.8.5"

[dev-dependencies]
termcolor = "1.1"
