[package]
name = "abstract-dpll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "e1560b7", version = "^0" , features = ["contracts"] }