[package]
name = "no_creusot"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarekhs@uio.no>"]
edition = "2021"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
debug = false
lto = true
opt-level = 3

[profile.release]
debug = false
lto = "fat"
opt-level = 3
panic="abort"
codegen-units=1

[dependencies]
clap = "2.33.3"
rand = "0.8.5"
#jemallocator="0.3.2"

[dev-dependencies]
termcolor = "1.1"
