[package]
name = "CreuSAT_test"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarekhs@uio.no>"]
edition = "2021"
include = ["*"]

[toolchain]
channel = "nightly-2022-04-14"

[profile.release]
#split-debuginfo = ?
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false

[dependencies]
CreuSAT = { path = "../CreuSAT" }
JigSAT = { path = "../JigSAT" }
termcolor = "1.1"
