[package]
name = "no_creusot"
version = "0.1.0"
authors = ["Sarek Høverstad Skotåm <sarekhs@uio.no>"]
edition = "2021"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.test]
debug = false
lto = true
opt-level = 3

[profile.release]
debug = false
lto = true
opt-level = 3

[dependencies]
clap = "2.33.3"

[dev-dependencies]
termcolor = "1.1"
